--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.jsoup:jsoup:1.13.1'
+	implementation 'com.opencsv:opencsv:5.3'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
