--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "com.diffplug.spotless" version "5.11.1"
 }
 
 group = 'com.matsta25'
@@ -20,6 +21,21 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+spotless {
+	format 'misc', {
+		target '**/*.gradle', '**/*.md', '.gitignore'
+
+		trimTrailingWhitespace()
+		indentWithTabs()
+		endWithNewline()
+	}
+	java {
+		importOrder()
+		removeUnusedImports()
+		googleJavaFormat('1.8').aosp()
+	}
 }
 
 test {
