feat(app): add actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 horoscope.url=https://horoskopy.gazeta.pl/horoskop/%s/dzienny/%s
 server.port=8081
+
+management.endpoints.web.base-path=/horoscope-actuator
