--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.jsoup:jsoup:1.13.1'
 	implementation 'com.opencsv:opencsv:5.3'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
